--- a/library.properties
+++ b/library.properties
@@ -3,8 +3,8 @@ version=1.0.0
 author=Lennart Hennigs
 maintainer=Lennart Hennigs <mail@lennarthennigs.de>
 sentence=Arduino Library to calculate the ESP8266 (Feather Huzzah) battery level.
-paragraph= 
+paragraph= It uses the Huzzah's ADC pin and a voltage divider to dermine the level. The library provides several callback handlers to be notified when the battery levels changes.
 category=Communication
-url=[]
+url=https://github.com/LennartHennigs/ESPBattery
 architectures=esp8266
 includes=ESPBattery.h
