--- a/library.properties
+++ b/library.properties
@@ -1,9 +1,9 @@
 name=ESP Battery
 version=1.0.0
-author=Lennart Hennigs
+author=Lennart Hennigs <mail@lennarthennigs.de>
 maintainer=Lennart Hennigs <mail@lennarthennigs.de>
 sentence=Arduino Library to calculate the ESP8266 (Feather Huzzah) battery level.
-paragraph= It uses the Huzzah's ADC pin and a voltage divider to dermine the level. The library provides several callback handlers to be notified when the battery levels changes.
+paragraph=It uses the Huzzah's ADC pin and a voltage divider to dermine the level. The library provides several callback handlers to be notified when the battery levels changes.
 category=Communication
 url=https://github.com/LennartHennigs/ESPBattery
 architectures=esp8266
